feat: add franchise/movies endpoint
